--- a/projects/personal-project/cointrax/backend/cointrax_proj/requirements.txt
+++ b/projects/personal-project/cointrax/backend/cointrax_proj/requirements.txt
@@ -1,18 +1,42 @@
 asgiref==3.7.2
+attrs==23.1.0
+autobahn==23.6.2
+Automat==22.10.0
 certifi==2023.7.22
+cffi==1.16.0
 channels==4.0.0
 charset-normalizer==3.2.0
+click==8.1.7
+constantly==23.10.4
+cryptography==41.0.7
+daphne==4.0.0
 Django==4.2.4
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
+gunicorn==21.2.0
+h11==0.14.0
+hyperlink==21.0.0
 idna==3.4
+incremental==22.10.0
 oauthlib==3.2.2
+packaging==23.2
 psycopg==3.1.10
 psycopg-binary==3.1.10
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pyOpenSSL==23.3.0
 python-dotenv==1.0.0
 pytz==2023.3
 requests==2.31.0
 requests-oauthlib==1.3.1
+service-identity==23.1.0
+six==1.16.0
 sqlparse==0.4.4
+Twisted==23.10.0
+txaio==23.1.1
 typing_extensions==4.7.1
 urllib3==2.0.4
+uvicorn==0.24.0.post1
+websockets==12.0
+zope.interface==6.1
